samples/_failures_safe/1761535824_6fb5dd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7557d966.c: In function ‘main’:
./samples/SAFE/__tmp_7557d966.c:151:11: error: expected ‘;’ at end of input
  151 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_7557d966.c:151:5: error: expected declaration or statement at end of input
  151 |     printf
      |     ^~~~~~
